// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ItemList > snapshots > should render empty list 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          0
           total
        </div>
        <button
          class="list__selectButton"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      aria-label="Visibility filter"
      class="filter-bar"
      role="group"
    >
      <button
        aria-pressed="true"
        class="filter-btn active"
        type="button"
      >
        All
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
          />
        </svg>
        Public
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        Private
      </button>
      <span
        class="filter-count"
      >
        Showing 
        0
         items
      </span>
    </div>
    <div
      class="list__masonry"
    >
      <p
        class="list__empty"
      >
        No items
      </p>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render list with items 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
        <button
          class="list__selectButton"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      aria-label="Visibility filter"
      class="filter-bar"
      role="group"
    >
      <button
        aria-pressed="true"
        class="filter-btn active"
        type="button"
      >
        All
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
          />
        </svg>
        Public
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        Private
      </button>
      <span
        class="filter-count"
      >
        Showing 
        3
         items
      </span>
    </div>
    <div
      class="list__masonry"
    >
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 1"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 1
          </button>
          <div
            class="item-card__meta"
          >
            Summary 1
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 2"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 2
          </button>
          <div
            class="item-card__meta"
          >
            Summary 2
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 3"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 3
          </button>
          <div
            class="item-card__meta"
          >
            Summary 3
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with add button 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
        <button
          class="list__selectButton"
          type="button"
        >
          Select
        </button>
        <button
          class="list__addButton"
          type="button"
        >
          + Add Item
        </button>
      </div>
    </div>
    <div
      aria-label="Visibility filter"
      class="filter-bar"
      role="group"
    >
      <button
        aria-pressed="true"
        class="filter-btn active"
        type="button"
      >
        All
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
          />
        </svg>
        Public
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        Private
      </button>
      <span
        class="filter-count"
      >
        Showing 
        3
         items
      </span>
    </div>
    <div
      class="list__masonry"
    >
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 1"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 1
          </button>
          <div
            class="item-card__meta"
          >
            Summary 1
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 2"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 2
          </button>
          <div
            class="item-card__meta"
          >
            Summary 2
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 3"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 3
          </button>
          <div
            class="item-card__meta"
          >
            Summary 3
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with pagination on multiple pages 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          50
           total
        </div>
        <button
          class="list__selectButton"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      aria-label="Visibility filter"
      class="filter-bar"
      role="group"
    >
      <button
        aria-pressed="true"
        class="filter-btn active"
        type="button"
      >
        All
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
          />
        </svg>
        Public
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        Private
      </button>
      <span
        class="filter-count"
      >
        Showing 
        50
         items
      </span>
    </div>
    <div
      class="list__masonry"
    >
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 26"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 26
          </button>
          <div
            class="item-card__meta"
          >
            Summary 26
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 27"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 27
          </button>
          <div
            class="item-card__meta"
          >
            Summary 27
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 28"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 28
          </button>
          <div
            class="item-card__meta"
          >
            Summary 28
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 29"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 29
          </button>
          <div
            class="item-card__meta"
          >
            Summary 29
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 30"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 30
          </button>
          <div
            class="item-card__meta"
          >
            Summary 30
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 31"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 31
          </button>
          <div
            class="item-card__meta"
          >
            Summary 31
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 32"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 32
          </button>
          <div
            class="item-card__meta"
          >
            Summary 32
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 33"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 33
          </button>
          <div
            class="item-card__meta"
          >
            Summary 33
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 34"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 34
          </button>
          <div
            class="item-card__meta"
          >
            Summary 34
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 35"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 35
          </button>
          <div
            class="item-card__meta"
          >
            Summary 35
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 36"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 36
          </button>
          <div
            class="item-card__meta"
          >
            Summary 36
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 37"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 37
          </button>
          <div
            class="item-card__meta"
          >
            Summary 37
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 38"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 38
          </button>
          <div
            class="item-card__meta"
          >
            Summary 38
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 39"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 39
          </button>
          <div
            class="item-card__meta"
          >
            Summary 39
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 40"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 40
          </button>
          <div
            class="item-card__meta"
          >
            Summary 40
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 41"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 41
          </button>
          <div
            class="item-card__meta"
          >
            Summary 41
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 42"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 42
          </button>
          <div
            class="item-card__meta"
          >
            Summary 42
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 43"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 43
          </button>
          <div
            class="item-card__meta"
          >
            Summary 43
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 44"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 44
          </button>
          <div
            class="item-card__meta"
          >
            Summary 44
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 45"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 45
          </button>
          <div
            class="item-card__meta"
          >
            Summary 45
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 46"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 46
          </button>
          <div
            class="item-card__meta"
          >
            Summary 46
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 47"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 47
          </button>
          <div
            class="item-card__meta"
          >
            Summary 47
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 48"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 48
          </button>
          <div
            class="item-card__meta"
          >
            Summary 48
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 49"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 49
          </button>
          <div
            class="item-card__meta"
          >
            Summary 49
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 50"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 50
          </button>
          <div
            class="item-card__meta"
          >
            Summary 50
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        2
         of 
        2
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;

exports[`ItemList > snapshots > should render with selected item 1`] = `
<div>
  <aside
    class="list"
  >
    <div
      class="list__header"
    >
      <h2
        class="list__title"
      >
        Items
      </h2>
      <div
        class="list__headerRight"
      >
        <div
          aria-label="Item count"
          class="list__count"
        >
          3
           total
        </div>
        <button
          class="list__selectButton"
          type="button"
        >
          Select
        </button>
      </div>
    </div>
    <div
      aria-label="Visibility filter"
      class="filter-bar"
      role="group"
    >
      <button
        aria-pressed="true"
        class="filter-btn active"
        type="button"
      >
        All
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        <svg
          aria-hidden="true"
          viewBox="0 0 24 24"
        >
          <path
            d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
          />
        </svg>
        Public
      </button>
      <button
        aria-pressed="false"
        class="filter-btn"
        type="button"
      >
        Private
      </button>
      <span
        class="filter-count"
      >
        Showing 
        3
         items
      </span>
    </div>
    <div
      class="list__masonry"
    >
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 1"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 1
          </button>
          <div
            class="item-card__meta"
          >
            Summary 1
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly item-card--selected"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 2"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 2
          </button>
          <div
            class="item-card__meta"
          >
            Summary 2
          </div>
        </div>
      </div>
      <div
        class="item-card item-card--textonly"
      >
        <div
          class="item-card__ribbon"
          style="background: linear-gradient(90deg, rgb(199, 125, 74), rgb(212, 165, 116));"
        />
        <button
          class="publish-btn item-card__publish-btn"
          type="button"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
              transform="rotate(-90 12 12)"
            />
          </svg>
          Publish
        </button>
        <div
          class="item-card__body"
        >
          <button
            aria-label="Select Item 3"
            class="item-card__name item-card__select"
            type="button"
          >
            Item 3
          </button>
          <div
            class="item-card__meta"
          >
            Summary 3
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Pagination"
      class="list__pager"
    >
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Previous
      </button>
      <div
        class="list__pagerStatus"
      >
        Page 
        1
         of 
        1
      </div>
      <button
        class="list__pagerButton"
        disabled=""
        type="button"
      >
        Next
      </button>
    </div>
  </aside>
</div>
`;
